Add token to login/register response

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "SqliteConnection": "Data Source=dating.db"
-  }
+  },
+  "TokenKey": "Nadie puede saber lo que hay aquí excepto yo, yes yes, es muy seguro si que si"
 }
