--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqliteConnection": "Data Source=dating.db"
-  }
+  },
+  "TokenKey": "Nadie puede saber lo que hay aquí excepto yo, yes yes, es muy seguro si que si"
 }
